--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.17.1",
+		"lodash": "^4.17.15",
 		"mongodb": "^3.5.5",
 		"simple-node-logger": "^18.12.24",
 		"socket.io": "^2.3.0",
